<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="at.webstube.icehockeystats.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_team_home"
                style="@style/AppTheme.Home.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_home" />

            <TextView
                android:id="@+id/text_team_name_home"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_team_home" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button_goal_home"
                    style="@style/AppTheme.Home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_goal"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/text_goal_home"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button_faceOff_home"
                    style="@style/AppTheme.Home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_faceoff"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/text_faceOff_home"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button_penalty_home"
                    style="@style/AppTheme.Home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_penalty"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/text_penalty_home"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button_offside_home"
                    style="@style/AppTheme.Home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_offside"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/text_offside_home"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button_shot_home"
                    style="@style/AppTheme.Home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_shot"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/text_shot_home"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button_shotOnGoal_home"
                    style="@style/AppTheme.Home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_shotOnGoal"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/text_shotOnGoal_home"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_team_guest"
                style="@style/AppTheme.Guest.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_guest" />

            <TextView
                android:id="@+id/text_team_name_guest"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_team_guest" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_goal_guest"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

                <Button
                    android:id="@+id/button_goal_guest"
                    style="@style/AppTheme.Guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_goal"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_faceOff_guest"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

                <Button
                    android:id="@+id/button_faceOff_guest"
                    style="@style/AppTheme.Guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_faceoff"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_penalty_guest"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

                <Button
                    android:id="@+id/button_penalty_guest"
                    style="@style/AppTheme.Guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_penalty"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_offside_guest"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

                <Button
                    android:id="@+id/button_offside_guest"
                    style="@style/AppTheme.Guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_offside"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_shot_guest"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

                <Button
                    android:id="@+id/button_shot_guest"
                    style="@style/AppTheme.Guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_shot"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/text_shotOnGoal_guest"
                    style="@style/AppTheme.Large"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_default_value" />

                <Button
                    android:id="@+id/button_shotOnGoal_guest"
                    style="@style/AppTheme.Guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick="buttonClick"
                    android:text="@string/button_text_shotOnGoal"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="buttonClick"
        android:text="@string/button_text_reset" />
</RelativeLayout>
